# Poo-Warchiefs

./: CMakeLists.txt  beast.h  clasaorc.h  classstrenghts.h  classstrengths.h  classweakness.h  main.cpp
